--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,6 @@
             "type": "dart",
             "request": "attach"
         },
-        
         {
             "name": "Flutter: Attach to Device",
             "type": "dart",
@@ -25,6 +24,17 @@
             "request": "launch",
             "type": "dart",
             "flutterMode": "profile"
+        },
+        {
+            "name": "Flutter for web (hot reloadable)",
+            "type": "dart",
+            "request": "launch",
+            "program": "lib/main.dart",
+            "args": [
+                "-d",
+                "chrome",
+                "--web-experimental-hot-reload"
+            ]
         },
         {
             "name": "ecommerce (release mode)",
