--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,7 +8,7 @@ plugins {
 
 android {
     namespace = "com.example.ecommerce"
-    compileSdk = flutter.compileSdkVersion
+    compileSdk = 35
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
@@ -47,7 +47,8 @@ flutter {
 dependencies {
   // Import the Firebase BoM
   implementation(platform('com.google.firebase:firebase-bom:33.1.0'))
-
+    implementation 'com.google.android.play:integrity:1.3.0'
+    implementation("com.google.firebase:firebase-auth")
 
   // TODO: Add the dependencies for Firebase products you want to use
   // When using the BoM, don't specify versions in Firebase dependencies
