--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,18 +31,19 @@ dependencies:
   flutter:
     sdk: flutter
   
-  firebase_core: ^3.1.0
+  firebase_core: ^4.0.0
   # firebase_storage:
   cloud_firestore:
   bloc:
   flutter_bloc:
   equatable:
-  go_router: ^15.1.2
+  go_router: ^16.1.0
   cached_network_image: ^3.4.0 
   lottie: ^3.1.2
   connectivity_plus: ^6.1.3
   shimmer:
   responsive_builder:
+  firebase_app_check: ^0.4.0
 
   product_repository:
     path: packages/product_repository
@@ -53,11 +54,13 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.10+1
   image_picker: ^1.1.2
-  path: ^1.8.3
+  # path: ^1.8.3
   image: ^4.2.0
   shared_preferences: ^2.5.3
-  firebase_auth: ^5.5.3
+  firebase_auth: ^6.0.0
   razorpay_flutter: ^1.4.0
+  http: ^1.4.0
+  flutter_animate: ^4.5.2
   razorpay_web: ^3.0.0
 
 dev_dependencies:
@@ -69,7 +72,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 
 # For information on the generic Dart part of this file, see the
